fix/home width overflow + various styling

--- a/_sass/_designers-italia.scss
+++ b/_sass/_designers-italia.scss
@@ -419,8 +419,8 @@ body {
       padding-right: 3.2rem !important;
       padding-left: 3.2rem !important;
       @media screen and (max-width: 1150px) {
-        padding-right: 1.2rem !important;
-        padding-left: 1.2rem !important;
+        padding-right: 2.6rem !important;
+        padding-left: 2.6rem !important;
       }
 
       &.is-current {
